# fast-api-grpc-svelte

./: Makefile  README.md  pyproject.toml
protos/: time.proto
src/: main.py
src/example/: client.py
src/server/time/: time_pb2.py  time_pb2_grpc.py
tests/: unit.py
